[project]
name = "comfyui-comfycouple"
description = "If you want to draw two different characters together without blending their features, so you could try to check out this custom node."
version = "0.1.4"
license = { file = "LICENSE.md" }

[project.urls]
Repository = "https://github.com/Danand/ComfyUI-ComfyCouple"

[tool.comfy]
PublisherId = "rei---"
DisplayName = "ComfyUI-ComfyCouple"
Icon = ""
